# c4

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  board.c  board.h  hashing.c  hashing.h  launch.vs.json  main.c  minunit.h  readme.md  settings.h  solver.c  solver.h  table.c  table.h  test.c
.github/workflows/: build-and-test.yml  cd.yaml  ci.yaml
arena/: Makefile  a.out  arena
arena/src/: arena.cpp  arena.h  main.cpp  player.h  player_random.cpp  player_random.h  player_solver.cpp  player_solver.h
book/: book-8x7.csv
data/: book-7x6.csv  book-8x7.csv
solver/: Makefile
solver/src/: c4.c  c4.cpp  hashing.h  order.c  order.cpp  order.h  position.cpp  position.h  solver.c  solver.cpp  solver.h  table.cpp
solver/tst/: known_states.cpp  known_states.h  minunit.h  test.cpp  test_board.c  test_board.cpp
src/: board.c  board.h  book.cpp  c4.c  c4.cpp  hashing.c  order.c  order.h  play.cpp  random.cpp  solver.c  solver.h  table.c  table.h
src/arena/: arena.cpp  arena.h  main.cpp  player.h  player_random.cpp  player_random.h  player_solver.cpp  player_solver.h
src/solver/: c4.cpp  entry.cpp  entry.h  order.cpp  order.h  os.cpp  os.h  pool.cpp  pool.h  position.cpp  position.h  progress.cpp  progress.h  result.cpp  result.h  search.cpp  search.h  settings.h  solver.cpp  solver.h  stats.cpp  stats.h  table.cpp  table.h  types.h  worker.cpp  worker.h  writer.cpp
src/solver/parallel/: pool.cpp  pool.h  result.cpp  result.h  worker.cpp  worker.h
src/solver/util/: os.cpp  progress.cpp  progress.h  stats.cpp  stats.h  writer.cpp  writer.h
src/training/: data.py  mnist.py  position.py  settings.py  train.py  validate.py
test/: known_states.c  test.c
tst/: known_states.c  known_states.cpp  known_states.h  minunit.h  test.c  test.cpp  test_board.c  test_board.cpp  test_board.h  test_position.cpp  test_position.h  test_table.cpp  test_table.h  unit_test.h
tst/data/10x6/: endgame_L1.txt  midgame_L1.txt  midgame_L2.txt  opening_L1.txt  opening_L2.txt
tst/data/9x5/: endgame_L1.txt  midgame_L1.txt  midgame_L2.txt  opening_L1.txt  opening_L2.txt  opening_L3.txt
ui/: bindings.cpp  library.js
ui/artifact/: index.html  styles.css  ui.js
